--- a/.golangci.yml
+++ b/.golangci.yml
@@ -15,5 +15,6 @@ issues:
   exclude-rules:
     - path: _test\.go
       linters:
-        - godox
+        - lll
+        - funlen
         - paralleltest
