--- a/.golangci.yml
+++ b/.golangci.yml
@@ -8,15 +8,16 @@ linters-settings:
 
 linters:
   enable-all: true
-  disable:
-    - wsl
 
 issues:
   exclude-rules:
     - path: _test\.go
+      text: "does not use range value in test Run"
+      linters:
+        - paralleltest
+    - path: _test\.go
       linters:
         - lll
-        - funlen
-        - paralleltest
-        - forbidigo
         - goerr113
+        - exhaustivestruct
+        - cyclop
