--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -15,16 +15,21 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v2
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: '1.16.x'
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v2
         with:
-          version: v1.37.0
+          version: v1.39.0
+          skip-go-installation: true
   test:
     name: Test
     runs-on: ubuntu-18.04
     strategy:
       matrix:
-        go: [ '1.15.x', '1.16.x' ]
+        go: [ '1.16.x' ]
     steps:
       - name: Check out code
         uses: actions/checkout@v2
