--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -29,7 +29,7 @@ jobs:
     runs-on: ubuntu-18.04
     strategy:
       matrix:
-        go: [ '1.16.x' ]
+        go: [ '1.16.x', '1.17.x' ]
     steps:
       - name: Check out code
         uses: actions/checkout@v2
@@ -38,7 +38,7 @@ jobs:
         with:
           go-version: ${{ matrix.go }}
       - name: Test Go Code
-        run: go test -short -race -covermode=atomic -coverprofile=coverage.txt ./...
+        run: go test -race -covermode=atomic -coverprofile=coverage.txt ./...
         env:
           KENALL_AUTHORIZATION_TOKEN: ${{ secrets.KENALL_AUTHORIZATION_TOKEN }}
       - name: Upload coverage to Codecov
