--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -13,17 +13,10 @@ jobs:
     name: Lint
     runs-on: ubuntu-18.04
     steps:
-      - name: Check out code
-        uses: actions/checkout@v2
-      - name: Set up Go
-        uses: actions/setup-go@v2
+      - uses: actions/checkout@v2
+      - uses: golangci/golangci-lint-action@v2
         with:
-          go-version: '1.16.x'
-      - name: golangci-lint
-        uses: golangci/golangci-lint-action@v2
-        with:
-          version: v1.39.0
-          skip-go-installation: true
+          version: v1.44.2
   test:
     name: Test
     runs-on: ubuntu-18.04
@@ -31,15 +24,11 @@ jobs:
       matrix:
         go: [ '1.16.x', '1.17.x' ]
     steps:
-      - name: Check out code
-        uses: actions/checkout@v2
-      - name: Set up Go
-        uses: actions/setup-go@v2
+      - uses: actions/checkout@v2
+      - uses: actions/setup-go@v2
         with:
           go-version: ${{ matrix.go }}
-      - name: Test Go Code
-        run: go test -race -covermode=atomic -coverprofile=coverage.txt ./...
+      - run: go test -race -covermode=atomic -coverprofile=coverage.txt ./...
         env:
           KENALL_AUTHORIZATION_TOKEN: ${{ secrets.KENALL_AUTHORIZATION_TOKEN }}
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v1
+      - uses: codecov/codecov-action@v2
