--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -13,8 +13,11 @@ jobs:
     name: Lint
     runs-on: ubuntu-18.04
     steps:
+      - uses: actions/setup-go@v3
+        with:
+          go-version: 1.17
       - uses: actions/checkout@v3
-      - uses: golangci/golangci-lint-action@v2
+      - uses: golangci/golangci-lint-action@v3
         with:
           version: v1.44.2
   test:
